# tree-sitter-log

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  binding.gyp  config.json  grammar.js  grammar_default  jsconfig.json  package.json  parser.exp  parser.lib  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm  neovim_highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
