[package]
name = "tree-sitter-log"
description = "log grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "log"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Tudyx/tree-sitter-log"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1.0"
